[gd_scene load_steps=2 format=3 uid="uid://cf2pfkahxkmul"]

[ext_resource type="Script" path="res://scripts/damage_zone.gd" id="1_lgrlv"]

[node name="damage_zone" type="Area2D"]
script = ExtResource("1_lgrlv")

[node name="timer_damage_cooldown" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="timer_damage_cooldown" to="." method="_on_timer_damage_cooldown_timeout"]
